full-moon/tests/roblox_cases/fail/parser/invalid_types/source.lua
type Foo = nil<string>
type Foo = nil.bar<string>
type Foo = "bar"<number>
